# thebook

./: Cargo.toml  README.md
blog/src/: enums.rs  lib.rs  main.rs  rs_state_pattern.rs  state_pattern.rs
brstd/: Cargo.toml
brstd/src/: lib.rs
common_collections/: Cargo.toml
common_collections/src/: integer_challenge.rs  lib.rs  main.rs  pig_latin.rs
control_flow/src/: main.rs
enums/src/: main.rs
errors/src/: lib.rs  main.rs
functions/src/: main.rs
generics/src/: main.rs
guessing_game/src/: main.rs
gui/src/: lib.rs  main.rs
iterators/src/: lib.rs
lifetime/src/: main.rs
minigrep/src/: lib.rs  main.rs
not_safe/: Cargo.toml
not_safe/src/: lib.rs
ownership/src/: main.rs
pattern/src/: lib.rs
rectangle/src/: main.rs
restaurant/src/: back_of_house.rs  lib.rs  main.rs
smart_pointers/src/: lib.rs  limit_tracker.rs  tree.rs
struct_type/: Cargo.toml
struct_type/src/: main.rs
tests/src/: lib.rs
tests/tests/: integration_test.rs
threads/src/: main.rs
traits/src/: advanced.rs  conditional.rs  lib.rs  main.rs
variables/src/: main.rs
