[workspace]
members = [
"backyard",
"brstd",
"common_collections",
"control_flow",
"enums",
"errors",
"functions",
"generics",
"guessing_game",
"gui",
"hello_cargo",
"hello_world",
"iterators",
"lifetime",
"minigrep",
"ownership",
"rectangle",
"restaurant",
"smart_pointers",
"struct_type",
"tests",
"threads",
"traits",
"variables",
]
resolver = "2"
