[workspace]
members = [
"backyard", "blog",
"brstd",
"common_collections",
"control_flow",
"enums",
"errors",
"functions",
"generics",
"guessing_game",
"gui",
"hello_cargo",
"hello_world",
"iterators",
"lifetime",
"minigrep",
"ownership", "pattern",
"rectangle",
"restaurant",
"smart_pointers",
"struct_type",
"tests",
"threads",
"traits",
"variables",
]
resolver = "2"
